--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@ $bootstrap-icons-font-src: url("../fonts/bootstrap-icons.woff2") format("woff2")
 $font-family-sans-serif: Inter, Arial, sans-serif;
 $headings-font-weight: bold;
 $gedling-red: #AA273E;
+$gedling-red-light: #C46274;
 
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/variables-dark";
@@ -22,7 +23,8 @@ $green-bin: #6eb43f;
 $glass-bin: #00aeef;
 
 $custom-colors: (
-    "gedling-red":$gedling-red,
+    "gedling-red": $gedling-red,
+    "gedling-red-light": $gedling-red-light,
     "green-bin": $green-bin,
     "black-bin": #a7a9ac,
     "glass-box": $glass-bin,
