--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -19,7 +19,7 @@
 
 <p>You can view the collection dates for the {{ pageTitle }} schedule below. You can download or subscribe to the calendar through the iCal URL. Alternatively you can bookmark this page to view the calendar dates at any time.</p>
 
-<div class="bg-gedling-red p-3 mb-4 border border-1 border-gedling-red-light rounded-3">
+<div id="subscribe-to-calendar" class="bg-gedling-red p-3 mb-4 border border-1 border-gedling-red-light rounded-3">
     <p class="fw-bold mb-2 text-white">To subscribe to this calendar use the following iCal URL:</p>
 
     <label for="ical-url" class="visually-hidden">iCal URL</label>
@@ -28,7 +28,7 @@
     <div class="d-grid d-md-flex gap-2 mt-2">
         <button id="copy-ical-url-btn" type="button" class="btn btn-secondary">Copy iCal URL</button>
         <a href="{{ icalUrl }}" class="btn btn-light" download>Download calendar (.ics)</a>
-        <a href="{{ 'https://pages.comms.gedling.gov.uk/pages/' | append: dataId | replace: '_', '-' }}" class="btn btn-dark">Email alerts</a>
+        <a href="https://waste.digital.gedling.gov.uk/w/webpage/bin-reminders" target="_blank" rel="nofollow" class="btn btn-dark">Email alerts</a>
     </div>
 </div>
 
@@ -107,6 +107,8 @@
     </div>
 {% endif %}
 
+{% assign iconMap = site.data.icons %}
+
 {% if isGardenCollection %}
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
@@ -115,7 +117,7 @@
                 <h2 class="h3" id="{{ month.name | slugify }}">{{ month.name }}</h2>
                 <ol class="list-unstyled">
                     {% for item in month.items %}
-                        <li data-bin-type="{{ item.type }}" data-bin-collection-date="{{ item.collectionDate | date: '%F' }}" {%- if item.isChangedCollection %} class="text-danger fw-bold"{% endif %}>
+                        <li data-bin-type="{{ item.type }}" data-bin-collection-date="{{ item.collectionDate | date: '%F' }}" {%- if item.isChangedCollection %} class="text-danger fw-bold schedule-item"{% endif %}>
                             {{ item.collectionDate | date: "%A %-d %B" }}
                             {% if item.isChangedCollection %}
                                 (Changed Collection)
@@ -136,9 +138,13 @@
             <div class="col" data-collection-first="{{ month.items.first.collectionDate | date: '%F'  }}" data-collection-last="{{ month.items.last.collectionDate | date: '%F' }}">
                 <h2 class="h3" id="{{ month.name | slugify }}">{{ month.name }}</h2>
 
+    
                 {% for item in month.items %}
-                    <div data-bin-type="{{ item.type }}" data-bin-collection-date="{{ item.collectionDate | date: '%F' }}" class="{%- if item.isChangedCollection %} border border-3 border-danger{% endif %} p-3 mb-2 {{ item.type }} bg-{{ item.type }} fw-bold">
-                        {{ item.collectionDate | date: "%A %-d %B" }} - {{ item.name }}
+                    <div data-is-changed-collection="{{ item.isChangedCollection ? 'true' : 'false' }}" data-bin-type="{{ item.type }}" data-bin-collection-date="{{ item.collectionDate | date: '%F' }}" class="{%- if item.isChangedCollection %} border border-3 border-danger{% endif %} p-3 mb-2 {{ item.type }} bg-{{ item.type }} fw-bold position-relative schedule-item">
+                        <span>{{ item.collectionDate | date: "%A %-d %B" }} - {{ item.name }}</span>
+                        {% for icon in iconMap[item.type] %}
+                            <i class="bi bi-{{ icon }}" aria-hidden="true"></i>
+                        {% endfor %}
                     </div>
                 {% endfor %}
             </div>
@@ -147,7 +153,7 @@
 
     <p class="fw-bold fs-5 mt-3 text-gedling-red">Don’t forget to put your bin and glass box out by 6am.</p>
 
-    <div class="refuse-collection-key my-4" aria-hidden="true">
+    <div class="refuse-collection-key my-4" aria-hidden="true" id="calendar-key">
         <h4 class="text-muted h6 fw-bold text-uppercase">Calendar key</h4>
 
         <div class="d-xl-flex gap-4">
