Use bootstrap print class

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -19,7 +19,7 @@
 
 <p>You can view the collection dates for the {{ pageTitle }} schedule below. You can download or subscribe to the calendar through the iCal URL. Alternatively you can bookmark this page to view the calendar dates at any time.</p>
 
-<div id="subscribe-to-calendar" class="bg-gedling-red p-3 mb-4 border border-1 border-gedling-red-light rounded-3">
+<div id="subscribe-to-calendar" class="bg-gedling-red p-3 mb-4 border border-1 border-gedling-red-light rounded-3 d-print-none">
     <p class="fw-bold mb-2 text-white">To subscribe to this calendar use the following iCal URL:</p>
 
     <label for="ical-url" class="visually-hidden">iCal URL</label>
@@ -153,7 +153,7 @@
 
     <p class="fw-bold fs-5 mt-3 text-gedling-red">Don’t forget to put your bin and glass box out by 6am.</p>
 
-    <div class="refuse-collection-key my-4" aria-hidden="true" id="calendar-key">
+    <div class="refuse-collection-key my-4 d-print-none" aria-hidden="true" id="calendar-key">
         <h4 class="text-muted h6 fw-bold text-uppercase">Calendar key</h4>
 
         <div class="d-xl-flex gap-4">
