--- a/_includes/header-minimal.html
+++ b/_includes/header-minimal.html
@@ -6,7 +6,7 @@
             </a>
 
             {% if page.url != '/collections/' %}
-                <a href="{{ '/collections' | absolute_url }}" class="d-none d-md-block btn btn-light" id="view-calendars-btn">
+                <a href="{{ '/collections' | absolute_url }}" class="d-none d-print-none d-md-block btn btn-light" id="view-calendars-btn">
                     View all calendars
                 </a>
             {% endif %}
