--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,15 +1,16 @@
 @media print {
 
+    html {
+        background-color: transparent !important;
+    }
+
     .development {
         &:before {
             display: none !important;
         }
     }
 
-    #calendar-key,
-    #breadcrumb,
-    #view-calendars-btn,
-    #subscribe-to-calendar {
+    #CookiebotWidget {
         display: none !important;
     }
 
@@ -32,9 +33,5 @@
 
     [data-is-changed-collection="true"] {
         color: $danger;
-    }
-
-    footer {
-        background-color: transparent !important;
     }
 }
