Set 3 col on larger breakpoint only

--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -133,7 +133,7 @@
 
 {% else %}
 
-    <div id="refuse-schedule-container" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+    <div id="refuse-schedule-container" class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
         {% for month in months %}
             <div class="col" data-collection-first="{{ month.items.first.collectionDate | date: '%F'  }}" data-collection-last="{{ month.items.last.collectionDate | date: '%F' }}">
                 <h2 class="h3 schedule-title" id="{{ month.name | slugify }}">{{ month.name }}</h2>
