--- a/_includes/find-collection-schedule.html
+++ b/_includes/find-collection-schedule.html
@@ -10,7 +10,7 @@
         <label for="street-name" class="form-label fw-bold">Enter your street name</label>
         <div class="input-group">
             <input type="search" class="form-control form-control-lg" id="street-name" minlength="5" placeholder="E.g. Oxclose Lane" required pattern="[A-Za-z\s]+" title="Please enter only a street name with alphanumeric characters/spaces, no house numbers or other address details.">
-            <button id="collection-search-btn" type="submit" class="btn btn-primary">
+            <button id="collection-search-btn" type="submit" class="btn btn-gedling-red">
                 Search
             </button>  
         </div>
