--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,5 +1,11 @@
 @media print {
 
+    * {
+        -webkit-print-color-adjust: exact !important;
+        color-adjust: exact !important;
+        print-color-adjust: exact !important;  
+    }
+    
     html {
         background-color: transparent !important;
     }
