--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -45,6 +45,7 @@
         margin: 0 !important;
         background-image: none !important;
         background-color: transparent !important;
+        font-weight: normal !important;
 
         p {
             font-size: 0.9rem !important;
