Amend styling to better match new Gedling site

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,4 +1,4 @@
-<nav id="breadcrumb" aria-label="breadcrumb" class="bg-light py-3 botder-1 border-bottom d-print-none">
+<nav id="breadcrumb" aria-label="breadcrumb" class="py-3 d-print-none">
     <div class="container">
         <ol class="breadcrumb mb-0">
             {% assign crumbs = page.url | remove: '/index.html' | split: '/' %}
