Update worker to use itty-router for multiple API routes

--- a/_includes/find-collection-schedule.html
+++ b/_includes/find-collection-schedule.html
@@ -1,5 +1,5 @@
 {% if jekyll.environment != 'production' %}
-    {% assign apiUrl = 'http://localhost:8787?streetName=' %}
+    {% assign apiUrl = 'http://localhost:8787/street-search/?streetName=' %}
 {% else %}
     {% assign apiUrl = site.collectionSearchUrl %}
 {% endif %}
