--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,6 +78,7 @@ $body-bg: #f2f2f2;
 @import "bootstrap/scss/forms";
 @import "bootstrap/scss/alert";
 @import "bootstrap/scss/tables";
+@import "bootstrap/scss/spinners";
 @import "bootstrap/scss/helpers";
 @import "bootstrap/scss/utilities/api";
 
