--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -55,4 +55,11 @@
     [data-is-changed-collection="true"] {
         color: $danger;
     }
+
+    #calendar-collections-data {
+        background-color: transparent !important;
+        border: none !important;
+        margin: 0 !important;
+        padding: 0 !important;
+    }
 }
