--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,1 +1,1 @@
-<img src="{{ "/assets/images/gedling-council-logo-white.png" | absolute_url }}" alt="Gedling Borough Council" class="img-fluid" width="{{ include.width | default: '300' }}">
+<img src="{{ "/assets/images/gedling-logo-white.svg" | absolute_url }}" alt="Gedling Borough Council" class="img-fluid" width="{{ include.width | default: '300' }}">
