--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,6 +58,9 @@ $breadcrumb-divider: url("data:image/svg+xml,%3csvg%20width='24'%20height='24'%2
 $breadcrumb-active-color: black;
 $breadcrumb-item-padding-x: .3rem;
 
+$nav-tabs-link-active-bg: $gedling-red;
+$nav-tabs-link-active-color: white;
+
 $toast-background-color: white;
 $body-bg: #f2f2f2;
 
@@ -70,6 +73,8 @@ $body-bg: #f2f2f2;
 @import "bootstrap/scss/images";
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/close";
 @import "bootstrap/scss/transitions";
