Add cache tags to main app resources

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 {% else %}
   {% assign isProduction = false %}
 {%- endif -%}
+{%- assign cacheTag = site.time | date: "%s%N" -%}
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
   <head>
@@ -15,15 +16,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo title=false %}
     <title>{% if isHome %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | absolute_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | absolute_url }}?v={{ cacheTag }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | absolute_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | absolute_url }}?v={{ cacheTag }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | absolute_url }}?v={{ cacheTag }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | absolute_url }}?v={{ cacheTag }}">
     <link rel="manifest" href="{{ '/site.webmanifest' | absolute_url }}">
-    <link rel="mask-icon" href="{{ '/assets/images/favicons/safari-pinned-tab.svg' | absolute_url }}" color="#a9233e">
+    <link rel="mask-icon" href="{{ '/assets/images/favicons/safari-pinned-tab.svg' | absolute_url }}?v={{ cacheTag }}" color="#a9233e">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -85,6 +86,6 @@
 
       {% include footer.html %}
 
-      <script src="{{ "/assets/js/bootstrap.bundle.min.js" | absolute_url }}"></script>
+      <script src="{{ '/assets/js/bootstrap.bundle.min.js' | absolute_url }}?v={{ cacheTag }}"></script>
   </body>
 </html>
